 - GBA Video: Fix broken sprite blending hack (fixes mgba.io/i/532)
 - Python: Fix importing .gb or .gba before .core
 - Qt: Fix command line debugger closing second game
 - Qt: Fix LOG argument order
 - Qt: Fix timezone issues with time overrides
 - Qt: Fix sprite export pausing game indefinitely (fixes mgba.io/i/841)
 - SDL: Fix potential race condition when pressing keys (fixes mgba.io/i/872)
Misc:
 - CMake: Fix CPack dependencies for libpng 1.6
 - GBA: Detect hardware for Pokémon FireRed ROM hacks
 - GBA Cheats: Improve detection of raw cheats
 - Qt: Don't rebuild library view if style hasn't changed
 - Qt: Allow overrides to be saved before a game is loaded
 - Qt: Hide mouse immediately when loading
 - SDL: Fix 2.0.5 build on macOS under some circumstances
 - VFS: Make VFile.truncate work growing files on PSV (fixes mgba.io/i/885)

0.6.0: (2017-07-16)
Features:
 - Library view
 - Sprite viewer
 - Debugging console
 - Improved memory viewer
 - Memory search
 - Command line ability to override configuration values
 - Add option to allow preloading the entire ROM before running
 - Add option for whether rewinding restores save games
 - Savestates now contain any RTC override data
 - Add option to lock video to integer scaling
 - LR35902: Watchpoints
 - LR35902/GB-Z80 disassembler
 - GB: Tile viewer
 - GB: Video/audio channel enabling/disabling
 - GB: Symbol table support
 - GB MBC: Add MBC1 multicart support
 - GBA: Support printing debug strings from inside a game
 - GBA: Better cheat type autodetection
 - Implement keypad interrupts
 - Configuration of gamepad hats
 - Video log recording for testing and bug reporting
 - Debugger: Segment/bank support
 - Debugger: Execution tracing
 - Partial Python scripting support
 - Qt: German translation (by Lothar Serra Mari)
 - Qt: Spanish translation (by Kevin López)
 - Qt: Italian translation (by theheroGAC)
Bugfixes:
 - ARM7: Fix MLA/*MULL/*MLAL timing
 - Core: Fix crash with rewind if savestates shrink